@@ -32,4 +32,6 @@ void vcalendar_done(void);
 void vcalviewer_display_event (VCalViewer *vcalviewer, VCalEvent *event);
 gchar *vcalviewer_get_uid_from_mimeinfo(MimeInfo *mimeinfo);
 void vcalviewer_reload(void);
+void vcalendar_cancel_meeting(const gchar *uid);
+
 #endif
