@@ -1,3 +1,13 @@
+2008-03-27 [cleroy]	1.101.0cvs22
+
+	* src/common-views.c
+	* src/day-view.c
+	* src/month-view.c
+	* src/vcalendar.c
+	* src/vcalendar.h
+		Allow cancelling from right-click menu
+		too
+
 2008-03-27 [colin]	1.101.0cvs21
 
 	* src/vcal_folder.c
